--- a/tis_catch_weight/static/description/index.html
+++ b/tis_catch_weight/static/description/index.html
@@ -8,7 +8,7 @@
 <section class="oe_container">
 	<div class="oe_row oe_spaced">
 	<div>
-            <center><img width="75%" height="50%" src="cw8v2.png"></center>
+            <center><a href="http://www.catchweighterp.com/"><img width="85%" height="50%" src="cw8v2.png"></a></center>
         </div>
         <div>
         	<h3 class="oe_mt32 oe_mb8">Activate Catch Weight System</h3>
